Blender CRASHES any time I try to bake indirect ligthing #57344

Closed
opened 2018-10-22 21:20:34 +02:00 by Fran · 8 comments

System Information
Windows 10 and NVIDIA GEFORCE GTX 960m (Drivers version: 416.34 Date: 10/11/2018)

Blender Version
Broken: 2.80-13cfb641c6d
Date: 2018-10-23 07:41

Short description of error
When Press "bake indirect ligthing" button Blender crashes

Exact steps for others to reproduce the error

  • Open the file "prueba3.blend"
  • Go to indirect lighting in render properties
  • Press "Bake Indirect Lighting" button

ERROR.txt

system-info.txt

prueba3.blend

**System Information** Windows 10 and NVIDIA GEFORCE GTX 960m (Drivers version: 416.34 Date: 10/11/2018) **Blender Version** Broken: 2.80-13cfb641c6d Date: 2018-10-23 07:41 **Short description of error** When Press "bake indirect ligthing" button Blender crashes **Exact steps for others to reproduce the error** - Open the file "prueba3.blend" - Go to indirect lighting in render properties - Press "Bake Indirect Lighting" button [ERROR.txt](https://archive.blender.org/developer/F5197716/ERROR.txt) [system-info.txt](https://archive.blender.org/developer/F5197723/system-info.txt) [prueba3.blend](https://archive.blender.org/developer/F5197731/prueba3.blend)
Author

Added subscriber: @foxist

Added subscriber: @foxist

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

Also please:

  • Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template!
  • Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions).
    ** If your GPU driver is already to latest version, try down-grading to a few previous versions (sometimes newest versions introduce bugs…).
  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • Try to tweak OGL settings in UserPreferences, System tab.
  • Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.).
  • Attach as text file here the report generated by Help -> System Info (do not paste it directly in comment).
  • Launch Blender from the command line with --debug-gpu option and attach as text file here any error printed out in the console (do not paste it directly in comment).
Also please: * Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template! * Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions). ** If your GPU driver is already to latest version, try down-grading to a few previous versions (sometimes newest versions introduce bugs…). * Try to start Blender in factory settings (`--factory-startup` commandline option) (this will ensure whether this is a userpref or addon issue or not). * Try to tweak OGL settings in UserPreferences, System tab. * Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.). * **Attach as text file** here the report generated by Help -> System Info (**do not** paste it directly in comment). * Launch Blender from the command line with `--debug-gpu` option and **attach as text file** here any error printed out in the console (**do not** paste it directly in comment).
Clément Foucault was assigned by Bastien Montagne 2018-10-23 15:20:39 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

Thanks, confirmed on linux as well.

@fclem think that one is for you? Here is the backtrace of the segfault:

1  gpu_framebuffer_texture_attach_ex   gpu_framebuffer.c  246  0x55b6584ab5df 
2  GPU_framebuffer_texture_attach      gpu_framebuffer.c  268  0x55b6584ab840 
3  EEVEE_effects_init                  eevee_effects.c    239  0x55b6586ad3c8 
4  eevee_lightbake_cache_create        eevee_lightcache.c 672  0x55b6585cc997 
5  eevee_lightbake_render_world_sample eevee_lightcache.c 724  0x55b6585cd195 
6  DRW_custom_pipeline                 draw_manager.c     1941 0x55b65855acc9 
7  lightbake_do_sample                 eevee_lightcache.c 1026 0x55b6585d12f0 
8  EEVEE_lightbake_job                 eevee_lightcache.c 1075 0x55b6585d1823 
9  do_job_thread                       wm_jobs.c          337  0x55b656641044 
10 tslot_thread_start                  threads.c          253  0x55b65980201a 
11 start_thread                        pthread_create.c   463  0x7f81c6471f2a 
12 clone                               clone.S            95   0x7f81bbc9fedf 
Thanks, confirmed on linux as well. @fclem think that one is for you? Here is the backtrace of the segfault: ``` 1 gpu_framebuffer_texture_attach_ex gpu_framebuffer.c 246 0x55b6584ab5df 2 GPU_framebuffer_texture_attach gpu_framebuffer.c 268 0x55b6584ab840 3 EEVEE_effects_init eevee_effects.c 239 0x55b6586ad3c8 4 eevee_lightbake_cache_create eevee_lightcache.c 672 0x55b6585cc997 5 eevee_lightbake_render_world_sample eevee_lightcache.c 724 0x55b6585cd195 6 DRW_custom_pipeline draw_manager.c 1941 0x55b65855acc9 7 lightbake_do_sample eevee_lightcache.c 1026 0x55b6585d12f0 8 EEVEE_lightbake_job eevee_lightcache.c 1075 0x55b6585d1823 9 do_job_thread wm_jobs.c 337 0x55b656641044 10 tslot_thread_start threads.c 253 0x55b65980201a 11 start_thread pthread_create.c 463 0x7f81c6471f2a 12 clone clone.S 95 0x7f81bbc9fedf ```

This issue was referenced by ee8e866a0e

This issue was referenced by ee8e866a0e9c43f3d0883bb45e4043995743946b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57344
No description provided.