Eevee: Fix crash when baking

Was caused by the normal pass being enbaled in the renderlayer settings.

Fix T57344